--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MLKangarooDetection</string>
+    <string name="floating_button">Import Image</string>
+    <string name="image_classification">Image Classification</string>
+    <string name="object_detection">Object Detection</string>
+    <string name="take_photo">Take photo</string>
+    <string name="start_capture">Start Capture</string>
+    <string name="stop_capture">Stop Capture</string>
 </resources>
